fix：调整缓存管理器管理方式，完善缓存模板，添加网站图标